# b-parasite

./: .gitignore
code/embassy/assets/: TypicalRustEmbassyExamples.md  flashing.md
code/embassy/samples/: Cargo.toml  memory.x
code/embassy/samples/.cargo/: config.toml
