[package]
name = "b-parasite-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.8.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "net-driver"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet","udp", "medium-ieee802154", "proto-ipv6"] }
embassy-futures = "0.1"
embassy-usb-logger = "0.5"
embedded-io = { version = "0.6.0", features = ["defmt-03"]  }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

defmt = "1.0"
defmt-rtt = "1.1"

fixed = "1"
static_cell = { version = "2" }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
rand = { version = "0.9.0", default-features = false }
embedded-storage = "0.3.1"
usbd-hid = "0.9.0"
serde = { version = "1.0.136", default-features = false }
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
num-integer = { version = "0.1.45", default-features = false }
microfft = "0.5.0"
portable-atomic = "1"

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv7em-none-eabi", artifact-dir = "out/examples/b-parasite" }
]

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "pwm"
path = "src/bin/pwm.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "input"
path = "src/bin/input.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "mse"
path = "src/bin/moisture_sensor_excitation.rs"
test = false
doctest = false
bench = false
