[package]
name = "b-parasite-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = { version = "0.7", features = ["defmt"] }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.8", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "net-driver"] }
embassy-usb = { version = "0.5", features = ["defmt"] }
embassy-net = { version = "0.7", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "udp", "medium-ieee802154", "proto-ipv6"] }
embassy-futures = "0.1"
embedded-io-async = { version = "0.6", features = ["defmt-03"] }
trouble-host = { version = "0.5", features = ["derive", "scan", "gatt"] }
trouble-example-apps = { version = "0.1", path = "../../../../TrouBLE/examples/apps", features = ["defmt"] }
nrf-sdc = { version = "0.4", default-features = false, features = ["defmt", "peripheral", "central"] }
nrf-mpsl = { version = "0.3", default-features = false, features = ["defmt", "critical-section-impl"] }
bt-hci = { version = "0.6", default-features = false, features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.1"

fixed = "1"
static_cell = { version = "2" }
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-probe = { version = "1.0", features = ["print-defmt"] }

[patch.crates-io]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "11d5c3c"}
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "11d5c3c"}

[features]
default = ["nrf52840"]
nrf52840 = [
    "embassy-nrf/nrf52840",
    "nrf-sdc/nrf52840",
    "nrf-mpsl/nrf52840",
]

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
    { target = "thumbv7em-none-eabi", artifact-dir = "out/examples/b-parasite" }
]

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "pwm"
path = "src/bin/pwm.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "input"
path = "src/bin/input.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "mse"
path = "src/bin/moisture_sensor_excitation.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "srl"
path = "src/bin/soil_read_loop.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "ble"
path = "src/bin/ble.rs"
test = false
doctest = false
bench = false
